[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/font01.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/font00.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Obj/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/GameUIHandler.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Obj/ParticleBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/SceneObj/GameScene.gd" type="Script" id=6]

[node name="GameScene" type="Node2D"]
script = ExtResource( 6 )

[node name="ParticleBackground" parent="." instance=ExtResource( 5 )]
position = Vector2( -0.267514, 0 )

[node name="Timer" type="Timer" parent="."]

[node name="MeteorSpawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SpawnPos" type="Node" parent="."]

[node name="SpawnPos" type="Node2D" parent="SpawnPos"]
position = Vector2( 1421.43, 112.303 )

[node name="SpawnPos2" type="Node2D" parent="SpawnPos"]
position = Vector2( 1421.43, 247.914 )

[node name="SpawnPos3" type="Node2D" parent="SpawnPos"]
position = Vector2( 1421.43, 377.169 )

[node name="SpawnPos4" type="Node2D" parent="SpawnPos"]
position = Vector2( 1421.43, 519.137 )

[node name="SpawnPos5" type="Node2D" parent="SpawnPos"]
position = Vector2( 1421.43, 648.392 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 287.262, 287.262 )
scale = Vector2( 1.25, 1.25 )

[node name="UIHandler" type="Control" parent="."]
visible = false
margin_left = -18.0
margin_top = 6.0
margin_right = 1078.0
margin_bottom = 738.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UIHandler"]
margin_left = 11.0
margin_top = -36.0
margin_right = 1312.0
margin_bottom = 725.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UIHandler/CenterContainer"]
margin_left = 521.0
margin_top = 332.0
margin_right = 779.0
margin_bottom = 429.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UIHandler/CenterContainer/VBoxContainer"]
margin_right = 258.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 2 )
text = "Game Over"

[node name="PlayAgainButton" type="Button" parent="UIHandler/CenterContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 258.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 1 )
text = "Play Again"

[node name="HomeButton" type="Button" parent="UIHandler/CenterContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 258.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 1 )
text = "Home"
[connection signal="pressed" from="UIHandler/CenterContainer/VBoxContainer/PlayAgainButton" to="UIHandler" method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="UIHandler/CenterContainer/VBoxContainer/HomeButton" to="UIHandler" method="_on_HomeButton_pressed"]
